chore: added parking zone delete request in swagger
