# src/config/swagger.yaml
@@ -121,3 +121,22 @@ paths:
       responses:
         "201":
           description: Reservation made successfully!
+  /zone/delete:
+    delete:
+      tags:
+        - Auth
+      security:
+        - bearerAuth: []
+      requestBody:
+        description: delete parking zone request
+        required: true
+        content:
+          application/json:
+            schema:
+              type: "object"
+              properties:
+                name:
+                  type: string
+      responses:
+        "201":
+          description: Parking zone deleted successfully!
